# twoc

./: .gitignore  Cargo.toml  README.md  build.rs  demo_commands.txt
src/: ast.rs  lib.rs  main.rs  parser.lalrpop
src/automaton/: ahu.rs  autom.rs  autom_old.rs  config.rs  construction.rs  construction_old.rs  determ_autom.rs  determ_construction.rs  generic_autom.rs  glueck.rs  mod.rs  transform_cond.rs
src/parser/: ast.rs  ast_sugar.rs  contract.rs  err_reporter.rs  filter_comments.rs  grammar_rules.lalrpop  mod.rs  program.rs  sugar_grammar.lalrpop
src/proofs/: arith.rs  fol.rs  mod.rs  prop_calc.rs
src/simulation/: ahu.rs  config.rs  glueck.rs  glueck2electricboogaloo.rs  glueck_array.rs  glueck_iterative.rs  glueck_nondeterm.rs  glueck_old.rs  jones.rs  mod.rs  naive_determ.rs  naive_nondeterm.rs  rytter.rs  rytter_matrix.rs
tests/: auto_tests.rs  determ.rs  determ_bench.rs  deterministic.rs  nondeterm.rs  nondeterm_bench.rs  nondeterministic.rs  nondeterministic_old.rs  sugar_parse.rs
tests/bench_results/: result_comparer.py  result_plotter.py
twocprogs/: equal_zeros_ones.twoc  loops_forever.twoc  zeros_then_ones.twoc
twocprogs/determ/: brackets.twoc  evens_sugar.twoc  loops_forever.twoc  very_long.twoc  x_plus_y_is_z.twoc  zeros_then_ones.twoc
twocprogs/deterministic/: equal_zeros_ones.twoc  evens.twoc  loops_forever.twoc  petersen_2.twoc  sugar.twoc  very_long.twoc  x_plus_y_is_z.twoc  zeros_then_ones.twoc
twocprogs/nondeterm/: branch_and_while_choose.twoc  branch_while.twoc  potential_loop.twoc  super_simple.twoc  while_choose.twoc  (+1 more)
(+18 files in other folders)
